<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WebsiteDetailsActivity" >

    <LinearLayout
        android:id="@+id/webdetails_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.66"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/weblog_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/website_details_loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/webdetails_data_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="visible" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showDividers="middle|end" >

            <TextView
                android:id="@+id/weblogdetails_entry_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/website_details_website_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/website_details_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/website_details_list_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/darker_gray" />
        
        <ListView
            android:id="@+id/website_details_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </TableLayout>

</RelativeLayout>